Correct incorrect role and add link bg contrast

--- a/style.scss
+++ b/style.scss
@@ -27,10 +27,10 @@ $main-border: 3ch;
 $footer-bgcolor: #2D4356;
 $footer-txtcolor: #EFEFEF;
 /* index&navpages main link variable*/
-$mainlink-bgcolor: #628798;
-$mainlink-txtcolor: #2D4356;
+$mainlink-bgcolor: #2D4356;
+$mainlink-txtcolor: #EFEFEF;
 $mainlink-visited: #EFEFEF;
-$mainlink-hover: #2D4356;
+$mainlink-hover: #435B66;
 $mainlink-border: 3ch;
 $mainlink-padding: 1ch;
 
